Ass-1/getting_started/test_files/syntax_errors/NoMainMethod.cpm

class NoMainMethod {
    display(): void { // @error - syntax (No main method, which is required by the grammar)
        print(1);
    }
}
